...
                app:startIconDrawable="@drawable/ic_person"
                app:startIconTint="@color/colorPrimary"
                app:boxStrokeColor="@color/colorPrimary"
                app:hintTextColor="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_participant_name"
                    android:inputType="textPersonName|textCapWords"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>
...
