...
                    android:textSize="14sp" />

            </LinearLayout>

            <!-- Main Action Buttons -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_criar_grupo"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/btn_gradient_purple"
                android:text="@string/button_create_new_group"
                android:textColor="@color/white"
...
